[gd_scene load_steps=5 format=2]

[ext_resource path="res://PowerUp.gd" type="Script" id=1]
[ext_resource path="res://models/PowerUps/SpeedPowerUp.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 29.1076

[node name="PowerUp" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="SpeedPowerUp" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="SpeedPowerUp"]
scale = Vector2( 0.130859, 0.111328 )
texture = ExtResource( 3 )

[node name="Node2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D"]
shape = SubResource( 1 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="Node2D" to="." method="_on_Node2D_body_entered"]
[connection signal="body_entered" from="Node2D" to="SpeedPowerUp" method="_on_Node2D_body_entered"]
